--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">book-store-app</string>
+    <string name="title">Title: </string>
+    <string name="authors">Author(s): </string>
+    <string name="description">Description: </string>
+    <string name="buy_now">BUY NOW</string>
 </resources>
