--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="authors">Author(s): </string>
     <string name="description">Description: </string>
     <string name="buy_now">BUY NOW</string>
+    <string name="favorites_only">Favorites Only</string>
 </resources>
